--- a/student/student-qa.properties
+++ b/student/student-qa.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:h2:mem:noted-dev
-spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/schooled?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
