--- a/student/student-qa.properties
+++ b/student/student-qa.properties
@@ -1,10 +1,13 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/schooled?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=debug
 
 spring.devtools.livereload.enabled=true
 spring.h2.console.enabled=true
+
+spring.session.jdbc.initialize-schema=always
+spring.sql.init.mode=always
