--- a/application.properties
+++ b/application.properties
@@ -4,3 +4,5 @@ spring.session.jdbc.initialize-schema=always
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 spring.sql.init.mode=always
+
+api.paths.course.all=http://localhost:9092/course
